# Journey-of-the-Prairie-King

./: .gitignore  CMakeLists.txt  README.md  resource.qrc  vcpkg.json
.github/workflows/: ci.yml
assert/: siprite.json  sprite.json
assert/music/: FinalBoss_Ending.opus  Overworld.opus  TheOutlaw.opus
assert/picture/: gamemap.json  sprite.json
code/: CMakeLists.txt  main.cpp  precomp.h
code/app/: GameService.cpp  application.cpp
code/common/: GameMap.cpp  GameService.cpp
code/include/app/: Application.h  GameService.h
code/include/common/: GameMap.h  GameService.h
code/include/model/: player.h
code/include/view/: Animation.h  AudioEventListener.h  AudioManager.h  EndWidget.h  Entity.h  GameMap.h  GameWidget.h  MainWindow.h  SpriteManager.h  StartWidget.h
code/include/viewmodel/: BulletViewModel.h  CollisionSystem.h  EnemyManager.h  GameViewModel.h  HUDViewModel.h  InputManager.h  ItemEffectManager.h  ItemViewModel.h  PlayerViewModel.h  VendorManager.h  playerviewmodel.h
code/model/: player.cpp
code/view/: Animation.cpp  AudioEventListener.cpp  AudioManager.cpp  EndWidget.cpp  Entity.cpp  GameMap.cpp  GameWidget.cpp  MainWindow.cpp  SpriteManager.cpp  StartWidget.cpp
code/viewmodel/: BulletViewModel.cpp  CollisionSystem.cpp  EnemyManager.cpp  GameViewModel.cpp  HUDViewModel.cpp  InputManager.cpp  ItemEffectManager.cpp  ItemViewModel.cpp  PlayerViewModel.cpp  VendorManager.cpp  playerviewmodel.cpp
